# FlameberryCCompiler

./: Cargo.toml  README.md  run.sh  run_tests.sh
CCompiler/: lib.rs  symboltable.rs  typedefs.rs
CCompiler/analysis/: parser.rs  semantic_analyzer.rs
CCompiler/src/: Assembly.rs  ast.rs  compiler.rs  errors.rs  icg.rs  lexer.rs  lib.rs  main.rs  node.rs  parser.rs  preprocessor.rs  semantic_analyzer.rs  symboltable.rs  syntax_analyzer.rs  tokenizer.rs  typedefs.rs
CCompiler/src/analysis/: ast.rs  mod.rs  parser.rs  semantic_analyzer.rs  tokenizer.rs
CCompiler/src/synthesis/: assembly.rs  mod.rs  tac.rs
Sandbox/: gcc.s  return_2.c  test.c  test_gen.c  test_gen.s  test_semantic.c  test_tac.c  test_tac.s
Scripts/: GenerateExecutable.sh
cli/: Cargo.toml
cli/src/: main.rs
docs/: ast-generation.md  ir-asm-generation.md
fbcc/: Cargo.toml
fbcc/src/: compiler.rs  lib.rs  preprocessor.rs
fbcc/src/analysis/: ast.rs  node.rs  parser.rs  semantic_analyzer.rs  (+1 more)
tests/: test.c  test_asm.c  test_asm.s  test_gen.c  test_ir.c  test_ir.s  test_ir_simple.c  test_semantic.c
tests/backend/: 01_return_constant.c  01_return_constant.s  02_arithmetic_precedence.c  02_arithmetic_precedence.s  03_modulo.c  03_modulo.s  04_locals.c  04_locals.s  05_reassignment.c  05_reassignment.s  06_if_else.c  06_if_else.s  07_while_sum.c  07_while_sum.s  08_for_sum.c  08_for_sum.s  09_nested_calls.c  09_nested_calls.s  10_recursion_factorial.c  10_recursion_factorial.s  11_break_continue.c  11_break_continue.s  12_big_immediates.c  12_big_immediates.s  13_unary_ops.c  13_unary_ops.s
(+11 files in other folders)
