[package]
name = "FlameberryCCompiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "CCompiler/src/main.rs"

[lib]
name = "flameberrycc"
path = "CCompiler/src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
